--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
